# rsresolve

./: Cargo.toml
inputs/: dnsqueries.pcap  dnsqueries2.pcap  dnsqueries3.pcap
src/: README.md  main.rs  read.rs  request.rs
