[package]
edition = "2021"
name = "resolve"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.9", features = ["derive"]}
deku = "0.13.0"
pcap = "0.9.2"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
